MOBILE-4842 theme: Fix dark mode styles not working

--- a/src/theme/components/bootstrap/_close.scss
+++ b/src/theme/components/bootstrap/_close.scss
@@ -54,10 +54,6 @@
   @include btn-close-white();
 }
 
-.btn-close {
-  --#{$prefix}btn-close-filter: #{$btn-close-filter};
-}
-
 @if $enable-dark-mode {
   @include color-mode(dark, true) {
     @include btn-close-white();
