--- a/src/theme/components/bootstrap/_variables.scss
+++ b/src/theme/components/bootstrap/_variables.scss
@@ -385,7 +385,6 @@ $enable-deprecation-messages: true !default;
 $enable-important-utilities:  true !default;
 
 $enable-dark-mode:            true !default;
-$color-mode-type:             data !default; // `data` or `media-query`
 
 // Prefix for :root CSS variables
 
