--- a/src/theme/components/bootstrap/mixins/_color-mode.scss
+++ b/src/theme/components/bootstrap/mixins/_color-mode.scss
@@ -1,6 +1,6 @@
 // scss-docs-start color-mode-mixin
-@mixin color-mode($mode: light, $root: false) {
-  :root.dark & {
+@mixin color-mode($unused_mode: dark, $unused_root: false) {
+  @at-root :root.dark & {
     @content;
   }
 }
